fixtures/src/valid/epub3-with-images/OEBPS/chapter1.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml">
<head><title>Chapter 1</title></head>
<body>
  <h1>Chapter with Image</h1>
  <p>This chapter contains an image.</p>
  <img src="images/cover.png" alt="Cover image"/>
</body>
</html>
